--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
+    "vue-totop": "^1.0.3",
     "vuex": "^3.6.2",
     "wangeditor": "^4.7.11",
     "ws": "^8.3.0"
