--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "express-ip": "^1.0.4",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-html": "^1.0.6",
     "node-notifier": "^10.0.0",
     "npm-install-webpack-plugin": "^4.0.5",
     "sass": "^1.26.5",
