--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "dev": "webpack-dev-server --mode=development --progress --config build/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --mode=production --progress --config build/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --mode=production --progress --config build/webpack.prod.js",
+    "getChart": "webpack --progress --config build/webpack.dev.js --json > stats.json"
   },
   "type": "commonjs",
   "dependencies": {
@@ -54,6 +55,7 @@
     "@vue/cli-service": "^4.5.15",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "express-ip": "^1.0.4",
@@ -62,6 +64,7 @@
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-minify-html": "^1.0.6",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-notifier": "^10.0.0",
     "npm-install-webpack-plugin": "^4.0.5",
     "sass": "^1.26.5",
@@ -70,12 +73,13 @@
     "scss-loader": "0.0.1",
     "ts-loader": "^7.0.5",
     "typescript": "^4.4.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^4.1.1",
     "vue-lazyload": "^1.3.3",
     "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.4.0",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^4.1.0"
